@startuml
skinparam classAttributeIconSize 0

' =======================
'          CORE
' =======================
package "core" {

    class ShelterManager {
        - globalQueue : BlockingQueue
        - shelters : Map
        + createShelter(id : String, capacity : int)
        + addRefugeeToGlobalQueue(refugee : Refugee)
        + updateCapacity(shelterId : String, capacity : int)
    }

    class Shelter <<Runnable>> {
        - shelterId : String
        - sharedQueue : BlockingQueue
        - beds : Semaphore
        - totalCapacity : AtomicInteger
        - running : boolean
        + run()
        - processStay(refugee : Refugee)
        + setCapacity(newCapacity : int)
        + getStatusJson() : String
    }
}

' =======================
'          MODEL
' =======================
package "model" {

    class Refugee <<Comparable>> {
        - id : String
        - priority : PriorityLevel
        - arrivalTime : long
        - processingTimeMs : int
        + getId() : String
        + getPriority() : PriorityLevel
        + getProcessingTimeMs() : int
        + compareTo(other : Refugee) : int
    }

    enum PriorityLevel {
        ELDERLY
        PREGNANT
        CHILD
        ADULT
    }
}

' =======================
'         NETWORK
' =======================
package "network" {

    class ClientHandler <<Runnable>> {
        - clientSocket : Socket
        - manager : ShelterManager
        + run()
    }

    class ServerListener {
        - port : int
        - shelterManager : ShelterManager
        + start()
    }
}

' =======================
'           APP
' =======================
package "app" {

    class SimulatorOsApplication <<SpringBootApplication, CommandLineRunner>> {
        + main(args : String[])
        + run(args : String[])
    }
}

' =======================
'     UTIL / EXTERNAL
' =======================
class BlockingQueue
class Semaphore
class AtomicInteger
class Map
class Socket

' =======================
'        RELATIONS
' =======================
ShelterManager "1" *-- "0..*" Shelter : manages
ShelterManager "1" *-- "1" BlockingQueue : globalQueue\n<Refugee>

Shelter --> BlockingQueue : sharedQueue\n<Refugee>
Shelter --> Semaphore
Shelter --> AtomicInteger
Shelter --> Refugee : processes

Refugee --> PriorityLevel

ClientHandler --> ShelterManager
ClientHandler --> Refugee : creates

ServerListener *-- ShelterManager
ServerListener --> ClientHandler : spawns

SimulatorOsApplication --> ServerListener : starts

@enduml
